fix runner hangs, hopefully
